fix($desktop): fixed alignment of stat cards

--- a/scss/_stats.scss
+++ b/scss/_stats.scss
@@ -123,7 +123,7 @@
 
         width: 210px;
         height: 150px;
-        margin-top: 45px;
+        margin-top: 35px;
 
         text-align: center;
 
@@ -198,15 +198,22 @@
         &_num
         {
             @include TYPE-StatsNum;
+
+            @media #{$desktop} {
+              margin-top: 40px;
+            }
         }
 
         &_desc
         {
             max-width: 240px;
-            max-height: 48px;
             margin: 5px;
 
             @include TYPE-StatsText;
+
+            @media #{$desktop} {
+              height: 75px;
+            }
         }
     }
 }
